--- a/Onlineexam.html
+++ b/Onlineexam.html
@@ -23,8 +23,7 @@ return true;
 <center>
 <h1>Online Examination</h1>
 </center>
-<form action="Student" method="post"
-name="entry" onSubmit="return validation(this)">
+<form action="" method="post"name="entry" onSubmit="return validation(this)">
 <input type="hidden" value="list" name="action">
 <table>
  <tr>
